# ml_testing

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: sentiment.py  synthetic.py
data/household_electric_power/: household_electric_power.py
data/temperature/: temperature.py
models/: LSTM_sentiment.py  basic_LSTM.py  basic_rnn.py  rnn_household_power.py
notebooks/: text_classification_BERT.ipynb
scripts/: basic_rnn_test.py  electric_household_consumption.py  sentiment_analysis.py  temperature_prediction.py  text_preprocessing.py
