# For more information on the following content, see
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html

[project]
name = "ML_testing"
version = "0.1"
description = "Python repository for ML activities"
readme = "README.md"
requires-python = ">=3.10"

# Add end-user-facing dependencies here, for example `requests>=2.30`.
dependencies = []

# These are dependencies that developers use during project development,
# such as test frameworks and documentation generation tools. These are
# separated from `dependencies` above because end-users (people who
# import your project for use in their own project) don't need such
# dependencies to use your code.
[project.optional-dependencies]
develop = [
    "pytest==7.4.3",
    "pre-commit==3.5.0",
    "pylint==3.0.2",
    "pytest==7.4.3",
    "sphinx>=6.1.3",
    "sphinx_rtd_theme>=1.2.0",
    "black==22.12.0",
    "isort==5.12.0",
    "pyupgrade==3.3.1",
    "mdformat==0.7.16",
    "mdformat-black",
    "mdformat-gfm",
    "ruff==0.2.2",
    "mypy==1.8.0"
]
docs = [
    "sphinx==7.1.2",
    "sphinx-rtd-theme==2.0.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3
# NOTE: requires 'git' pre-installed on the system
skip_gitignore = true
skip = [
    ".dockerignore",
    ".gitignore",
]

[tool.black]
line-length = 120

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data", "models", "scripts"]  # Replace with your actual package name
exclude = []
namespaces = false